--- a/MangerSystem/pom.xml
+++ b/MangerSystem/pom.xml
@@ -84,6 +84,26 @@
 			<artifactId>spring-session-jdbc</artifactId>
 		</dependency>
 	-->
+	<!-- <dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpClient</artifactId>
+		<version>4.5.12</version>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+		<version>1.7.7</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>1.3.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.jsoup</groupId>
+		<artifactId>jsoup</artifactId>
+		<version>1.13.1</version>
+	</dependency> -->
 	<dependency>
 		<groupId>org.projectlombok</groupId>
 		<artifactId>lombok</artifactId>
