--- a/MangerSystem/pom.xml
+++ b/MangerSystem/pom.xml
@@ -57,11 +57,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
-		</dependency>-->
-		<!-- <dependency>
+		</dependency>
+	 	<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency> -->
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -83,8 +83,7 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-jdbc</artifactId>
 		</dependency>
-	-->
-	<!-- <dependency>
+-->	<!-- <dependency>
 		<groupId>org.apache.httpcomponents</groupId>
 		<artifactId>httpClient</artifactId>
 		<version>4.5.12</version>
