--- a/Tj/src/main/resources/application-dev.yml
+++ b/Tj/src/main/resources/application-dev.yml
@@ -2,12 +2,10 @@ spring:
   datasource:
     continue-on-error: true
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: mysql://112.124.4.172/programs_tj?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/programs_tj?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&serverTimezone=GMT%2B8
     username: root
-    password: your127@Y
-  mvc:
-    view:
-      suffix: .html
-mybatis:
-  mapper-localtions:
-  - classpath:mapper/*.xml
+    password: root
+#    password: your127@
+  mvc:    view:      suffix: .html
+mybatis:  mapper-locations:  - classpath:mapper/*.xml
+  
