完成个人金额计算查询，但未没有展示详细信息

--- a/Tj/src/main/resources/application-dev.yml
+++ b/Tj/src/main/resources/application-dev.yml
@@ -6,6 +6,13 @@ spring:
     username: root
     password: root
 #    password: your127@
-  mvc:    view:      suffix: .html
-mybatis:  mapper-locations:  - classpath:mapper/*.xml
-  
+  mvc:
+    view:
+      suffix: .html
+mybatis:
+  mapper-locations:
+  - classpath:mapper/*.xml
+
+logging:
+  level:
+    com.cn.commodity.dao: debug
