--- a/Tj/src/main/resources/application-dev.yml
+++ b/Tj/src/main/resources/application-dev.yml
@@ -9,6 +9,11 @@ spring:
   mvc:
     view:
       suffix: .html
+#  data:
+#    elasticsearch:
+#      repositories:
+#        enabled: true
+#      client: 127.0.0.1:9300
 mybatis:
   mapper-locations:
   - classpath:mapper/*.xml
